# MuMDIA

./: .gitignore  CONFIG_IMPROVEMENT.md  Makefile  README.md  TESTING_STATUS.md  TEST_COVERAGE_REPORT.md  TEST_SUMMARY_REPORT.md  Untitled.ipynb  Untitled1.ipynb  WORKFLOW_VISUALIZATION.md  config_demo.py  config_manager.py  config_manager_clean.py  data_structures.py  deeplc_wrapper.py  demo_config.json  example_usage.py  ms2pip_wrapper.py  mumdia.py  mumdia_workflow_diagram.puml  mzml_parser.py  parquet_parser.py  pyproject.toml  run.py  run_simple.py  test_requirements.txt  time_script.py  visualize_pin.ipynb
.github/workflows/: ci.yml  dependency-update.yml  release.yml  test-status.yml
configs/: backup_config.json  backup_config2.json  config.json  config_basic.json  config_wide.json
deconvolution/: devoncolution.py
feature_generators/: features_fragment_intensity.py  features_general.py  features_retention_time.py
notebook_helpers/: compare_diann.ipynb  denovo_seq.ipynb  get_peptides_steps.ipynb  missing_peptides.fasta  report.pr_matrix.tsv  results.mztab  visualize_identifications.ipynb  visualize_pin.ipynb  visualize_pin_backup.ipynb
parsers/: parser_mzml.py  parser_parquet.py
peptide_search/: config_utils.py  wrapper_sage.py
prediction_wrappers/: wrapper_deeplc.py  wrapper_ms2pip.py
sequence/: fasta.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_advanced_functionality.py  test_config_and_workflow.py  test_data_structures.py  test_features_fragment_intensity.py  test_features_fragment_intensity_simple.py  test_features_general.py  test_features_retention_time.py  test_mumdia_core.py  test_numerical_methods.py  test_parsers.py  test_performance.py  test_pickling.py  test_prediction_wrappers.py  test_sequence.py  test_utilities.py  test_workflow_integration.py  validate_testing_framework.py
utilities/: config_loader.py  config_models.py  io_utils.py  logger.py  pickling.py
workflow_visualization/: README.md  WorkflowDiagramGenerator.java  generate_diagrams.sh  generate_workflow_figure.py  mumdia_workflow_summary.puml
